--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Remote_Command_Execution
-main.class=remote.command.execution.RemoteCommandExecution
+main.class=remotecommandexecution.RemoteCommandExecution
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
